<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.antiblangsak.antiblangsak.DaftarRekeningActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxxl"
            android:layout_marginLeft="@dimen/margin_xxxl"
            android:layout_marginRight="@dimen/margin_xxxl"
            android:padding="@dimen/padding_xs"
            android:text="@string/daftarrekening_banknamehint"
            android:textSize="@dimen/textsize_hint"
            android:textColor="@color/gray"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_spinner"
            android:layout_marginRight="@dimen/margin_spinner"
            android:layout_marginBottom="@dimen/margin_md"
            android:background="@drawable/all_spinner">

            <Spinner
                android:id="@+id/bankNameSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_xxxl"
            android:layout_marginRight="@dimen/margin_xxxl"
            android:layout_marginBottom="@dimen/margin_md"
            android:theme="@style/EditTextTheme">

            <EditText
                android:id="@+id/etBranchName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daftarrekening_branchnamehint"
                android:inputType="text"
                android:textSize="@dimen/textsize_inputtext"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/yellow" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_xxxl"
            android:layout_marginRight="@dimen/margin_xxxl"
            android:layout_marginBottom="@dimen/margin_md"
            android:theme="@style/EditTextTheme">

            <EditText
                android:id="@+id/etAccountNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daftarrekening_accountnumberhint"
                android:inputType="number"
                android:textSize="@dimen/textsize_inputtext"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/yellow"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_xxxl"
            android:layout_marginRight="@dimen/margin_xxxl"
            android:layout_marginBottom="@dimen/margin_md"
            android:theme="@style/EditTextTheme">

            <EditText
                android:id="@+id/etAccountHolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daftarrekening_accountholdernamehint"
                android:inputType="text"
                android:textSize="@dimen/textsize_inputtext"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/yellow"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_xxxl"
            android:layout_marginRight="@dimen/margin_xxxl"
            android:layout_marginBottom="@dimen/margin_md"
            android:theme="@style/EditTextTheme">

            <EditText
                android:id="@+id/etAccountPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daftarrekening_accountphotohint"
                android:inputType="text"
                android:textSize="@dimen/textsize_inputtext"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/yellow"
                />
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/pbDaftarkan"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_xxxl"
            android:indeterminateTint="@color/yellow"
            android:indeterminate="true" />

        <Button
            android:id="@+id/btnDaftarkanRekening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_xxxl"
            android:layout_marginRight="@dimen/margin_xxxl"
            android:layout_marginTop="@dimen/margin_xl"
            android:paddingBottom="@dimen/padding_xxs"
            android:background="@drawable/all_button"
            android:text="@string/daftarrekening_daftarkanbutton"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_button_md"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
