<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvDeskripsiDKK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/deskripsi_dkk"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/textsize_md" />

            <TextView
                android:id="@+id/tvDeskripsiDKK1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/deskripsi_dkk1"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/textsize_md" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5">

                <LinearLayout
                    android:id="@+id/rowDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_lg">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5">

                        <Button
                            android:id="@+id/btnRS"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="0dp"
                            android:layout_marginBottom="@dimen/margin_sm"
                            android:layout_marginLeft="@dimen/margin_xxxl"
                            android:layout_marginRight="@dimen/margin_xxxl"
                            android:layout_marginTop="@dimen/margin_xl"
                            android:background="@drawable/all_button"
                            android:padding="@dimen/padding_sm"
                            android:text="@string/list_rumah_sakit"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_button_sm" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvSyaratKetentuan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_md"
                        android:text="@string/syarat_dan_ketentuan"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/textsize_md" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
