<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_dark"
        android:padding="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvDeskripsiDWK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/deskripsi_dwk"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="12dp"
            android:paddingTop="10dp"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/tvDeskripsiDWK1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/deskripsi_dwk1"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="12dp"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/tvDeskripsiDWK2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/deskripsi_dwk1"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="12dp"
            android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/tvSyaratKetentuanDWK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_xs"
                    android:text="@string/syarat_dan_ketentuan"
                    android:textAlignment="center"
                    android:textSize="14dp"
                    android:textColor="@color/blue"/>

            </LinearLayout>
    </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
