<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.antiblangsak.antiblangsak.DKKNasabahActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <ListView
            android:id="@+id/list_view_nasabah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </ListView>

        <LinearLayout
            android:id="@+id/layout_add_nasabah"
            android:padding="@dimen/padding_lg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_serviceitem">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:src="@drawable/ic_add_nasabah"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:paddingRight="@dimen/margin_sm"
                    android:adjustViewBounds="true"
                    android:layout_centerHorizontal="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/dkk_nasabah_daftarkan"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvBelumAdaNasabah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_lg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dkk_nasabah_belum_ada_nasabah_line_1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dkk_nasabah_belum_ada_nasabah_line_2"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_xxl"
        android:indeterminateTint="@color/yellow"
        android:indeterminate="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
